--- a/helm-values.yml
+++ b/helm-values.yml
@@ -17,3 +17,10 @@ resources:
   requests:
     cpu: 250m
     memory: 256Mi
+
+autoscaling:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 10
+  targetCPUUtilizationPercentage: 60
+  
